--- a/k8s/apps/default/audiobookshelf/ks.yaml
+++ b/k8s/apps/default/audiobookshelf/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets-stores
-    - name: rook-ceph
+      # - name: rook-ceph
   path: ./k8s/apps/default/audiobookshelf/app
   prune: true
   sourceRef:
