--- a/k8s/apps/observability/grafana/app/helmrelease.yaml
+++ b/k8s/apps/observability/grafana/app/helmrelease.yaml
@@ -88,21 +88,21 @@ spec:
               path: /var/lib/grafana/dashboards/default
     dashboards:
       default:
-        ceph-cluster:
-          # renovate: depName="Ceph Cluster"
-          gnetId: 2842
-          revision: 18
-          datasource: Prometheus
-        ceph-osd:
-          # renovate: depName="Ceph - OSD (Single)"
-          gnetId: 5336
-          revision: 9
-          datasource: Prometheus
-        ceph-pools:
-          # renovate: depName="Ceph - Pools"
-          gnetId: 5342
-          revision: 9
-          datasource: Prometheus
+        # ceph-cluster:
+        #   # renovate: depName="Ceph Cluster"
+        #   gnetId: 2842
+        #   revision: 18
+        #   datasource: Prometheus
+        # ceph-osd:
+        #   # renovate: depName="Ceph - OSD (Single)"
+        #   gnetId: 5336
+        #   revision: 9
+        #   datasource: Prometheus
+        # ceph-pools:
+        #   # renovate: depName="Ceph - Pools"
+        #   gnetId: 5342
+        #   revision: 9
+        #   datasource: Prometheus
         cert-manager:
           url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/cert-manager/dashboards/cert-manager.json
           datasource: Prometheus
