--- a/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -21,9 +21,9 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  dependsOn:
-    # - name: rook-ceph-cluster
-    namespace: rook-ceph
+  # dependsOn:
+  #   - name: rook-ceph-cluster
+  #     namespace: rook-ceph
   values:
     controllers:
       audiobookshelf:
