--- a/k8s/apps/default/sonarr/app/helmrelease.yaml
+++ b/k8s/apps/default/sonarr/app/helmrelease.yaml
@@ -21,7 +21,7 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  dependsOn:
+  # dependsOn:
   # - name: rook-ceph-cluster
   #   namespace: rook-ceph
   values:
