--- a/k8s/apps/default/qbittorrent/ks.yaml
+++ b/k8s/apps/default/qbittorrent/ks.yaml
@@ -24,6 +24,6 @@ spec:
       APP: *app
       GATUS_SUBDOMAIN: qb
       VOLSYNC_CAPACITY: 2Gi
-      VOLSYNC_ACCESSMODES: ReadWriteMany
+      VOLSYNC_ACCESSMODES: ReadWriteOnce
       VOLSYNC_STORAGECLASS: openebs-hostpath
       VOLSYNC_SNAPSHOTCLASS: openebs-hostpath
