feat: disable callhome

--- a/k8s/apps/openebs-system/openebs/app/helmrelease.yaml
+++ b/k8s/apps/openebs-system/openebs/app/helmrelease.yaml
@@ -20,6 +20,9 @@ spec:
     remediation:
       retries: 3
   values:
+    obs:
+      callhome:
+        enabled: false
     engines:
       local:
         lvm:
