fix: use one replica

--- a/k8s/apps/openebs-system/openebs/app/helmrelease.yaml
+++ b/k8s/apps/openebs-system/openebs/app/helmrelease.yaml
@@ -49,6 +49,8 @@ spec:
         isDefaultClass: false
         basePath: /var/openebs/local
     mayastor:
+      etcd:
+        replicaCount: 1
       csi:
         node:
           initContainers:
