--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./echo-server/ks.yaml
-  - ./kopia/ks.yaml
+  # - ./kopia/ks.yaml
   - ./home-assistant/ks.yaml
   - ./minio/ks.yaml
   - ./prowlarr/ks.yaml
