--- a/k8s/templates/volsync/backblaze.yaml
+++ b/k8s/templates/volsync/backblaze.yaml
@@ -32,14 +32,14 @@ spec:
   trigger:
     schedule: "0 0 * * *"
   restic:
-    copyMethod: "${VOLSYNC_COPYMETHOD:-Direct}"
+    copyMethod: "${VOLSYNC_COPYMETHOD:-Snapshot}"
     pruneIntervalDays: 7
     repository: "${APP}-volsync-backblaze-secret"
-    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-openebs-hostpath}"
+    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-csi-mayastor-snapshotclass}"
     cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-4Gi}"
     cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-openebs-hostpath}"
     cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
-    storageClassName: "${VOLSYNC_STORAGECLASS:-openebs-hostpath}"
+    storageClassName: "${VOLSYNC_STORAGECLASS:-openebs-single-replica}"
     accessModes: ["${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"]
     moverSecurityContext:
       runAsUser: 568
