--- a/k8s/apps/default/jellyfin/app/pvc.yaml
+++ b/k8s/apps/default/jellyfin/app/pvc.yaml
@@ -7,4 +7,4 @@ spec:
   resources:
     requests:
       storage: 75Gi
-  storageClassName: openebs-hostpath
+  storageClassName: openebs-single-replica
