feat: change dependsOn to openebs

--- a/k8s/apps/default/radarr/app/helmrelease.yaml
+++ b/k8s/apps/default/radarr/app/helmrelease.yaml
@@ -21,9 +21,9 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  # dependsOn:
-  # - name: rook-ceph-cluster
-  #   namespace: rook-ceph
+  dependsOn:
+    - name: openebs
+      namespace: openebs-system
   values:
     controllers:
       radarr:
