--- a/k8s/apps/openebs-system/openebs/app/helmrelease.yaml
+++ b/k8s/apps/openebs-system/openebs/app/helmrelease.yaml
@@ -54,6 +54,11 @@ spec:
         resources:
           requests:
             cpu: 50m
+      agents:
+        core:
+          resources:
+            requests:
+              cpu: 50m
       etcd:
         replicaCount: 1
       csi:
