--- a/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -23,8 +23,8 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    # - name: rook-ceph-operator
-    #   namespace: rook-ceph
+    - name: rook-ceph-operator
+      namespace: rook-ceph
     - name: snapshot-controller
       namespace: volsync-system
   values:
