--- a/k8s/apps/default/audiobookshelf/app/pvc.yaml
+++ b/k8s/apps/default/audiobookshelf/app/pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jellyseerr-cache
+  name: audiobookshelf
 spec:
-  accessModes: ["ReadWriteOnce"]
+  accessModes: ["ReadWriteMany"]
   resources:
     requests:
       storage: 15Gi
-  storageClassName: ceph-block
+  storageClassName: ceph-filesystem
