--- a/k8s/apps/default/home-assistant/app/helmrelease.yaml
+++ b/k8s/apps/default/home-assistant/app/helmrelease.yaml
@@ -22,8 +22,8 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: openebs
-      namespace: openebs-system
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: volsync
       namespace: volsync-system
   values:
