--- a/k8s/apps/default/stash/app/pvc.yaml
+++ b/k8s/apps/default/stash/app/pvc.yaml
@@ -3,8 +3,8 @@ kind: PersistentVolumeClaim
 metadata:
   name: stash
 spec:
-  accessModes: ["ReadWriteOnce"]
+  accessModes: ["ReadWriteMany"]
   resources:
     requests:
       storage: 15Gi
-  storageClassName: openebs-single-replica
+  storageClassName: ceph-filesystem
