--- a/k8s/apps/openebs-system/openebs/app/helmrelease.yaml
+++ b/k8s/apps/openebs-system/openebs/app/helmrelease.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -18,11 +19,29 @@ spec:
   upgrade:
     cleanupOnFail: true
     remediation:
+      strategy: rollback
       retries: 3
   values:
-    obs:
-      callhome:
-        enabled: false
+    localpv-provisioner:
+      localpv:
+        image:
+          registry: quay.io/
+      hostpathClass:
+        name: openebs-hostpath
+      helperPod:
+        image:
+          registry: quay.io/
+    openebs-crds:
+      csi:
+        volumeSnapshots:
+          enabled: false
+          keep: false
+    zfs-localpv:
+      enabled: false
+    lvm-localpv:
+      enabled: false
+    mayastor:
+      enabled: false
     engines:
       local:
         lvm:
@@ -31,65 +50,4 @@ spec:
           enabled: false
       replicated:
         mayastor:
-          enabled: true
-    openebs-crds:
-      csi:
-        volumeSnapshots:
           enabled: false
-    localpv-provisioner:
-      localpv:
-        image:
-          registry: quay.io/
-      helperPod:
-        image:
-          registry: quay.io/
-      hostpathClass:
-        enabled: true
-        name: openebs-hostpath
-        isDefaultClass: false
-        basePath: /var/openebs/local
-    mayastor:
-      io_engine:
-        cpuCount: "0.5"
-        resources:
-          requests:
-            cpu: 50m
-      agents:
-        core:
-          resources:
-            requests:
-              cpu: 50m
-      etcd:
-        replicaCount: 1
-      csi:
-        node:
-          initContainers:
-            enabled: false
-      resources:
-        requests:
-          cpu: 50m
-      operator:
-        resources:
-          requests:
-            cpu: 50m
-      ha:
-        resources:
-          requests:
-            cpu: 50m
-      node:
-        resources:
-          requests:
-            cpu: 50m
-      cluster:
-        resources:
-          requests:
-            cpu: 50m
-      apis:
-        rest:
-          resources:
-            requests:
-              cpu: 50m
-      stats:
-        resources:
-          requests:
-            cpu: 50m
