fix: add repository

--- a/k8s/flux/repositories/helm/kustomization.yaml
+++ b/k8s/flux/repositories/helm/kustomization.yaml
@@ -23,4 +23,4 @@ resources:
   - ./node-feature-discovery.yaml
   - ./piraeus.yaml
   - ./external-secrets.yaml
-  # - ./rook-ceph.yaml
+  - ./rook-ceph.yaml
