--- a/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -50,6 +50,8 @@ spec:
       bdev_enable_discard = true
       bdev_async_discard = true
       osd_class_update_on_start = false
+      osd_pool_default_min_size = 1
+      osd_pool_default_size = 1
     cephClusterSpec:
       mon:
         count: 1
