fix: add memory requests:

--- a/k8s/apps/default/home-assistant/app/helmrelease.yaml
+++ b/k8s/apps/default/home-assistant/app/helmrelease.yaml
@@ -47,6 +47,8 @@ spec:
             resources:
               # requests:
               #   cpu: 10m
+              requests:
+                memory: 256Mi
               limits:
                 memory: 2Gi
           code-server:
