--- a/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -56,7 +56,8 @@ spec:
               readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
             resources:
-              # requests:
+              requests:
+                memory: 256Mi
               #   cpu: 10m
               limits:
                 memory: 256Mi
