--- a/k8s/apps/default/jellyfin/app/helmrelease.yaml
+++ b/k8s/apps/default/jellyfin/app/helmrelease.yaml
@@ -61,6 +61,8 @@ spec:
               readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
             resources:
+              requests:
+                memory: 256Mi
               limits:
                 gpu.intel.com/i915: 1
                 memory: 16Gi
