--- a/k8s/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/k8s/apps/default/jellyseerr/app/helmrelease.yaml
@@ -58,6 +58,8 @@ spec:
             resources:
               # requests:
               #   cpu: 10m
+              requests:
+                memory: 256Mi
               limits:
                 memory: 2Gi
     defaultPodOptions:
