--- a/k8s/apps/default/minio/app/helmrelease.yaml
+++ b/k8s/apps/default/minio/app/helmrelease.yaml
@@ -63,6 +63,8 @@ spec:
               readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
             resources:
+              requests:
+                memory: 256Mi
               limits:
                 memory: 2Gi
     defaultPodOptions:
