--- a/k8s/apps/default/radarr/app/helmrelease.yaml
+++ b/k8s/apps/default/radarr/app/helmrelease.yaml
@@ -71,6 +71,8 @@ spec:
               readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
             resources:
+              requests:
+                memory: 256Mi
               limits:
                 memory: 4Gi
     defaultPodOptions:
