--- a/k8s/apps/default/jellyseerr/app/pvc.yaml
+++ b/k8s/apps/default/jellyseerr/app/pvc.yaml
@@ -8,3 +8,14 @@ spec:
     requests:
       storage: 15Gi
   storageClassName: ceph-block
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jellyfin
+spec:
+  accessModes: ["ReadWriteMany"]
+  resources:
+    requests:
+      storage: 5Gi
+  storageClassName: ceph-filesystem
