--- a/k8s/apps/default/jellyseerr/app/pvc.yaml
+++ b/k8s/apps/default/jellyseerr/app/pvc.yaml
@@ -12,7 +12,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jellyfin
+  name: jellyseerr
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
