--- a/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -215,49 +215,4 @@ spec:
       name: csi-ceph-filesystem
       isDefault: false
       deletionPolicy: Delete
-    cephObjectStores:
-      - name: ceph-objectstore
-        spec:
-          metadataPool:
-            failureDomain: osd
-            replicated:
-              size: 1
-          dataPool:
-            failureDomain: osd
-            erasureCoded:
-              dataChunks: 2
-              codingChunks: 1
-          preservePoolsOnDelete: true
-          gateway:
-            hostNetwork: false
-            port: 80
-            resources:
-              requests:
-                # cpu: 100m
-                cpu: 10m
-                # memory: 1Gi
-                memory: 10Mi
-              limits:
-                memory: 2Gi
-            instances: 2
-            priorityClassName: system-cluster-critical
-          healthCheck:
-            bucket:
-              interval: 60s
-        storageClass:
-          enabled: true
-          name: ceph-bucket
-          reclaimPolicy: Delete
-          volumeBindingMode: Immediate
-          parameters:
-            region: us-east-1
-        ingress:
-          enabled: true
-          annotations:
-            external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
-            nginx.ingress.kubernetes.io/proxy-body-size: "0"
-            nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
-          ingressClassName: internal
-          host:
-            name: "rgw.${SECRET_DOMAIN}"
-            path: /
+    cephObjectStores: []
