--- a/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -67,9 +67,9 @@ spec:
         modules:
           - name: pg_autoscaler
             enabled: true
-      network:
-        connections:
-          requireMsgr2: true
+      # network:
+      #   connections:
+      #     requireMsgr2: true
       storage:
         useAllNodes: true
         useAllDevices: true
