fix: use different images, adjust permissions etc

--- a/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -97,3 +97,6 @@ spec:
         globalMounts:
           - path: /media
             readOnly: true
+      metadata:
+        type: emptyDir
+        path: /config/metadata
