--- a/k8s/apps/default/readarr/app/pvc.yaml
+++ b/k8s/apps/default/readarr/app/pvc.yaml
@@ -8,3 +8,14 @@ spec:
     requests:
       storage: 15Gi
   storageClassName: ceph-filesystem
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: readarr-cache
+spec:
+  accessModes: ["ReadWriteOnce"]
+  resources:
+    requests:
+      storage: 2Gi
+  storageClassName: ceph-block
