--- a/k8s/apps/network/nginx/internal/helmrelease.yaml
+++ b/k8s/apps/network/nginx/internal/helmrelease.yaml
@@ -67,7 +67,7 @@ spec:
           namespaceSelector:
             any: true
       extraArgs:
-        default-ssl-certificate: network/solanyn-dev-tls
+        default-ssl-certificate: "network/${SECRET_DOMAIN//./-}-tls"
       terminationGracePeriodSeconds: 120
       topologySpreadConstraints:
         - maxSkew: 1
