--- a/k8s/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/app/helmrelease.yaml
@@ -32,20 +32,20 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         initContainers:
-          name: git-sync
-          image:
-            repository: registry.k8s.io/git-sync/git-sync
-            tag: v4.0.0
-          restartPolicy: Always
-          args:
-            - --repo=https://github.com/VueTorrent/VueTorrent
-            - --depth=1
-            - --branch=latest-release
-            - --period=3600
-            - --root=/themes/vuetorrent
-          volumeMounts:
-            - name: themes
-              mountPath: /themes
+          git-sync:
+            image:
+              repository: registry.k8s.io/git-sync/git-sync
+              tag: v4.0.0
+            restartPolicy: Always
+            args:
+              - --repo=https://github.com/VueTorrent/VueTorrent
+              - --depth=1
+              - --branch=latest-release
+              - --period=3600
+              - --root=/themes/vuetorrent
+            volumeMounts:
+              - name: themes
+                mountPath: /themes
         containers:
           app:
             image:
