--- a/k8s/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/app/helmrelease.yaml
@@ -57,7 +57,7 @@ spec:
               - --depth=1
               - --ref=latest-release
               - --period=1h
-              - --root=/config/vuetorrent
+              - --root=/config
           iqbit:
             image:
               repository: registry.k8s.io/git-sync/git-sync
@@ -67,7 +67,7 @@ spec:
               - --depth=1
               - --ref=master
               - --period=1h
-              - --root=/config/iqbit
+              - --root=/config
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
