feat: use 1password API key in readarr, add omegabrr

--- a/k8s/apps/default/readarr/app/helmrelease.yaml
+++ b/k8s/apps/default/readarr/app/helmrelease.yaml
@@ -44,6 +44,9 @@ spec:
               READARR__SERVER__PORT: &port 80
               READARR__UPDATE__BRANCH: develop
               TZ: "Australia/Sydney"
+            envFrom:
+              - secretRef:
+                  name: readarr-secret
             resources:
               requests:
                 memory: 256Mi
