--- a/k8s/apps/default/readarr/app/externalsecret.yaml
+++ b/k8s/apps/default/readarr/app/externalsecret.yaml
@@ -13,16 +13,16 @@ spec:
       engineVersion: v2
       data:
         READARR__AUTH__APIKEY: "{{ .READARR_API_KEY }}"
-        # READARR__POSTGRES__HOST: &dbHost postgres16-rw.database.svc.cluster.local
-        # READARR__POSTGRES__PORT: "5432"
-        # READARR__POSTGRES__USER: &dbUser "{{ .READARR_POSTGRES_USER }}"
-        # READARR__POSTGRES__PASSWORD: &dbPass "{{ .READARR_POSTGRES_PASSWORD }}"
-        # READARR__POSTGRES__MAINDB: &dbName readarr_main
-        # INIT_POSTGRES_DBNAME: *dbName
-        # INIT_POSTGRES_HOST: *dbHost
-        # INIT_POSTGRES_USER: *dbUser
-        # INIT_POSTGRES_PASS: *dbPass
-        # INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
+        READARR__POSTGRES__HOST: &dbHost postgres16-rw.database.svc.cluster.local
+        READARR__POSTGRES__PORT: "5432"
+        READARR__POSTGRES__USER: &dbUser "{{ .READARR_POSTGRES_USER }}"
+        READARR__POSTGRES__PASSWORD: &dbPass "{{ .READARR_POSTGRES_PASSWORD }}"
+        READARR__POSTGRES__MAINDB: &dbName readarr_main
+        INIT_POSTGRES_DBNAME: *dbName
+        INIT_POSTGRES_HOST: *dbHost
+        INIT_POSTGRES_USER: *dbUser
+        INIT_POSTGRES_PASS: *dbPass
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
         key: cloudnative-pg
