--- a/k8s/apps/flux-system/alerts/app/alert.yaml
+++ b/k8s/apps/flux-system/alerts/app/alert.yaml
@@ -1,12 +1,12 @@
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Provider
 metadata:
-  name: discord
+  name: alertmanager
   namespace: flux-system
 spec:
-  type: discord
+  type: alertmanager
   secretRef:
-    name: discord-webhook
+    name: alertmanager-secret
 ---
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Alert
@@ -14,13 +14,15 @@ metadata:
   name: notifications
   namespace: flux-system
 spec:
-  summary: Cluster add-ons
+  summary: Flux Events
   eventMetadata:
     cluster: homelab
   providerRef:
-    name: discord
+    name: alertmanager
   eventSeverity: info
   eventSources:
+    - kind: HelmRelease
+      name: '*'
     - kind: GitRepository
       name: '*'
     - kind: Kustomization
