--- a/k8s/apps/flux-system/alerts/ks.yaml
+++ b/k8s/apps/flux-system/alerts/ks.yaml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app notifications
+  name: &app pushover
   namespace: flux-system
 spec:
   targetNamespace: flux-system
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./k8s/apps/notifications/discord/app
+  path: ./k8s/apps/flux-system/pushover/app
   prune: true
   sourceRef:
     kind: GitRepository
