--- a/k8s/apps/observability/kube-prometheus-stack/app/externalsecret.yaml
+++ b/k8s/apps/observability/kube-prometheus-stack/app/externalsecret.yaml
@@ -20,7 +20,7 @@ spec:
             group_by: ["alertname", "job"]
             group_interval: 10m
             group_wait: 1m
-            receiver: discord
+            receiver: heartbeat
             repeat_interval: 12h
             routes:
               - receiver: heartbeat
@@ -32,7 +32,7 @@ spec:
               - receiver: "null"
                 matchers:
                   - alertname =~ "InfoInhibitor"
-              - receiver: discord
+              - receiver: pushover
                 continue: true
                 matchers:
                   - severity = "critical"
@@ -48,9 +48,28 @@ spec:
                 - send_resolved: true
                   url: "{{ .ALERTMANAGER_CLUSTER_MAIN_HEARTBEAT_URL }}"
             - name: "null"
-            - name: discord
-              discord_configs:
-              - webhook_url: "{{ .DISCORD_WEBHOOK_URL }}"
+            - name: pushover
+              pushover_configs:
+                - html: true
+                  message: |-
+                    {{ "{{-" }} range .Alerts {{ "}}" }}
+                      {{ "{{-" }} if ne .Annotations.description "" {{ "}}" }}
+                        {{ "{{" }} .Annotations.description {{ "}}" }}
+                      {{ "{{-" }} else if ne .Annotations.summary "" {{ "}}" }}
+                        {{ "{{" }} .Annotations.summary {{ "}}" }}
+                      {{ "{{-" }} else if ne .Annotations.message "" {{ "}}" }}
+                        {{ "{{" }} .Annotations.message {{ "}}" }}
+                      {{ "{{-" }} else {{ "}}" }}
+                        Alert description not available
+                      {{ "{{-" }} end {{ "}}" }}
+                      {{ "{{-" }} if gt (len .Labels.SortedPairs) 0 {{ "}}" }}
+                        <small>
+                        {{ "{{-" }} range .Labels.SortedPairs {{ "}}" }}
+                          <b>{{ "{{" }} .Name {{ "}}" }}:</b> {{ "{{" }} .Value {{ "}}" }}
+                        {{ "{{-" }} end {{ "}}" }}
+                        </small>
+                      {{ "{{-" }} end {{ "}}" }}
+                    {{ "{{-" }} end {{ "}}" }}
                   priority: |-
                     {{ "{{" }} if eq .Status "firing" {{ "}}" }}1{{ "{{" }} else {{ "}}" }}0{{ "{{" }} end {{ "}}" }}
                   send_resolved: true
@@ -59,7 +78,11 @@ spec:
                   title: >-
                     [{{ "{{" }} .Status | toUpper {{ "}}" }}{{ "{{" }} if eq .Status "firing" {{ "}}" }}:{{ "{{" }} .Alerts.Firing | len {{ "}}" }}{{ "{{" }} end {{ "}}" }}]
                     {{ "{{" }} .CommonLabels.alertname {{ "}}" }}
+                  token: "{{ .ALERTMANAGER_PUSHOVER_TOKEN }}"
                   url_title: View in Alertmanager
+                  user_key: "{{ .PUSHOVER_USER_KEY }}"
   dataFrom:
     - extract:
         key: alertmanager
+    - extract:
+        key: pushover
