--- a/k8s/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/app/helmrelease.yaml
@@ -31,6 +31,7 @@ spec:
       qbittorrent:
         annotations:
           reloader.stakater.com/auto: "true"
+        hostNetwork: true
         containers:
           app:
             image:
