--- a/k8s/apps/default/readarr/app/helmrelease.yaml
+++ b/k8s/apps/default/readarr/app/helmrelease.yaml
@@ -29,6 +29,24 @@ spec:
       readarr:
         annotations:
           reloader.stakater.com/auto: "true"
+        initContainers:
+          init-main-db:
+            image:
+              repository: ghcr.io/onedr0p/postgres-init
+              tag: 16
+            envFrom: &envFrom
+              - secretRef:
+                  name: readarr-secret
+          init-cache-db:
+            image:
+              repository: ghcr.io/onedr0p/postgres-init
+              tag: 16
+            envFrom: &envFrom
+              - secretRef:
+                  name: readarr-secret
+            env:
+              READARR__POSTGRES__MAINDB: &dbName readarr_cache
+              INIT_POSTGRES_DBNAME: *dbName
         containers:
           app:
             image:
