fix: use linuxserver

--- a/k8s/apps/default/readarr/app/helmrelease.yaml
+++ b/k8s/apps/default/readarr/app/helmrelease.yaml
@@ -30,28 +30,18 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         initContainers:
-          init-main-db:
+          init-db:
             image:
               repository: ghcr.io/onedr0p/postgres-init
               tag: 16
             envFrom: &envFrom
               - secretRef:
                   name: readarr-secret
-          init-cache-db:
-            image:
-              repository: ghcr.io/onedr0p/postgres-init
-              tag: 16
-            envFrom: &envFrom
-              - secretRef:
-                  name: readarr-secret
-            env:
-              READARR__POSTGRES__MAINDB: &dbName readarr_cache
-              INIT_POSTGRES_DBNAME: *dbName
         containers:
           app:
             image:
-              repository: ghcr.io/hotio/readarr
-              tag: latest
+              repository: lscr.io/linuxserver/readarr
+              tag: develop
             env:
               READARR__APP__INSTANCENAME: Readarr
               # READARR__APP__THEME: dark
