--- a/k8s/apps/default/readarr/app/externalsecret.yaml
+++ b/k8s/apps/default/readarr/app/externalsecret.yaml
@@ -18,6 +18,7 @@ spec:
         READARR__POSTGRES__USER: &dbUser "{{ .READARR_POSTGRES_USER }}"
         READARR__POSTGRES__PASSWORD: &dbPass "{{ .READARR_POSTGRES_PASSWORD }}"
         READARR__POSTGRES__MAINDB: &dbName readarr_main
+        READARR__POSTGRES__CACHEDB: readarr_cache
         INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_USER: *dbUser
