--- a/k8s/apps/default/readarr/app/externalsecret.yaml
+++ b/k8s/apps/default/readarr/app/externalsecret.yaml
@@ -17,6 +17,7 @@ spec:
         READARR__POSTGRES__PORT: "5432"
         READARR__POSTGRES__USER: &dbUser "{{ .READARR_POSTGRES_USER }}"
         READARR__POSTGRES__PASSWORD: &dbPass "{{ .READARR_POSTGRES_PASSWORD }}"
+        READARR__POSTGRES__MAINDB: readarr_main
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
