--- a/k8s/apps/default/readarr/app/helmrelease.yaml
+++ b/k8s/apps/default/readarr/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               - secretRef:
                   name: readarr-secret
             env:
-              INIT_POSTGRES_DBNAME: readarr_main
+              INIT_POSTGRES_DBNAME: readarr-main
           init-cache-db:
             image:
               repository: ghcr.io/onedr0p/postgres-init
@@ -47,7 +47,7 @@ spec:
               - secretRef:
                   name: readarr-secret
             env:
-              INIT_POSTGRES_DBNAME: readarr_cache
+              INIT_POSTGRES_DBNAME: readarr-cache
         containers:
           app:
             image:
