--- a/k8s/apps/default/readarr/app/externalsecret.yaml
+++ b/k8s/apps/default/readarr/app/externalsecret.yaml
@@ -18,7 +18,8 @@ spec:
         READARR__POSTGRES__USER: &dbUser "{{ .READARR_POSTGRES_USER }}"
         READARR__POSTGRES__PASSWORD: &dbPass "{{ .READARR_POSTGRES_PASSWORD }}"
         READARR__POSTGRES__MAINDB: readarr_main
-        READARR__POSTGRES__CACHE_DB: readarr_cache
+        READARR__POSTGRES__CACHEDB: readarr_cache
+        READARR__POSTGRES__LOGDB: readarr_log
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
