fix: change secret value names

--- a/k8s/templates/volsync/minio.yaml
+++ b/k8s/templates/volsync/minio.yaml
@@ -20,7 +20,7 @@ spec:
     - extract:
         key: minio
     - extract:
-        key: volsync-minio-template
+        key: volsync
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/volsync.backube/replicationsource_v1alpha1.json
 apiVersion: volsync.backube/v1alpha1
