--- a/k8s/templates/volsync/backblaze.yaml
+++ b/k8s/templates/volsync/backblaze.yaml
@@ -12,7 +12,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        RESTIC_REPOSITORY: "{{ .REPOSITORY_TEMPLATE }}/${APP}"
+        RESTIC_REPOSITORY: "{{ .BACKBLAZE_REPOSITORY }}/${APP}"
         RESTIC_PASSWORD: "{{ .RESTIC_PASSWORD }}"
         AWS_ACCESS_KEY_ID: "{{ .AWS_ACCESS_KEY_ID }}"
         AWS_SECRET_ACCESS_KEY: "{{ .AWS_SECRET_ACCESS_KEY }}"
@@ -20,7 +20,7 @@ spec:
     - extract:
         key: backblaze
     - extract:
-        key: volsync-backblaze-template
+        key: volsync
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/volsync.backube/replicationsource_v1alpha1.json
 apiVersion: volsync.backube/v1alpha1
