feat: try onedr0p backup policy with kyverno

--- a/k8s/templates/volsync/claim.yaml
+++ b/k8s/templates/volsync/claim.yaml
@@ -10,5 +10,5 @@ spec:
     name: "${APP}-dst"
   resources:
     requests:
-      storage: "${VOLSYNC_CAPACITY}"
+      storage: "${VOLSYNC_CAPACITY:-5Gi}"
   storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
