--- a/.taskfiles/volsync/Taskfile.yaml
+++ b/.taskfiles/volsync/Taskfile.yaml
@@ -5,205 +5,121 @@ version: '3'
 #   2. ReplicationSource and ReplicationDestination are a Restic repository
 #   3. Applications are deployed as either a Kubernetes Deployment or StatefulSet
 #   4. Each application only has one PVC that is being replicated
-x-vars: &vars
-  APP: '{{.APP}}'
-  CLAIM: '{{.CLAIM}}'
-  CONTROLLER: '{{.CONTROLLER}}'
-  NS: '{{.NS}}'
-  PGID: '{{.PGID}}'
-  PREVIOUS: '{{.PREVIOUS}}'
-  RESTORE_AS_OF: '{{.RESTORE_AS_OF}}'
-  PUID: '{{.PUID}}'
-  CLASS_NAME: '{{.CLASS_NAME}}'
-  ACCESS_MODES: '{{.ACCESS_MODES}}'
 vars:
   VOLSYNC_RESOURCES_DIR: '{{.ROOT_DIR}}/.taskfiles/volsync/resources'
-  MINIJINJA_CMD: '{{ .HOME }}/.cargo/bin/minijinja-cli --env --trim-blocks --lstrip-blocks --autoescape=none --strict'
 tasks:
   state-*:
     desc: Suspend or Resume Volsync
-    summary: |
-      CLUSTER: Cluster to run command against (required)
+    summary: |-
+      CLUSTER: Cluster to run command against (default: main)
       STATE: resume or suspend (required)
     cmds:
+      # - until kubectl wait jobs --all --all-namespaces --for=condition=complete --timeout=5m &>/dev/null; do sleep 5; done
       - flux {{.STATE}} kustomization volsync
       - flux --namespace {{.NS}} {{.STATE}} helmrelease volsync
-      - kubectl --namespace {{.NS}} scale deployment volsync --replicas {{if eq "suspend" .STATE}}0{{else}}1{{end}}
+      - kubectl --namespace {{.NS}} scale deployment --all --replicas {{if eq .STATE "suspend"}}0{{else}}1{{end}}
     vars:
       NS: '{{.NS | default "volsync-system"}}'
       STATE: '{{index .MATCH 0}}'
-    env: *vars
     requires:
-      vars: ['CLUSTER']
-  list:
-    desc: List snapshots for an application
-    summary: |
-      CLUSTER: Cluster to run command against (required)
-      NS: Namespace the PVC is in (default: default)
-      APP: Application to list snapshots for (required)
-    cmds:
-      - '{{.MINIJINJA_CMD}} {{.VOLSYNC_RESOURCES_DIR}}/templates/list.yaml.j2 | kubectl apply -f -'
-      - bash {{.VOLSYNC_RESOURCES_DIR}}/scripts/wait-for-job.sh volsync-list-{{.APP}} {{.NS}}
-      - kubectl --namespace {{.NS}} wait job/volsync-list-{{.APP}} --for condition=complete --timeout=1m
-      - kubectl --namespace {{.NS}} logs job/volsync-list-{{.APP}} --container main
-      - kubectl --namespace {{.NS}} delete job volsync-list-{{.APP}}
-    vars:
-      NS: '{{.NS | default "default"}}'
-    env:
-      APP: '{{.APP}}'
-      NS: '{{.NS | default "default"}}'
-    requires:
-      vars: ['CLUSTER', 'APP']
-    preconditions:
-      - test -f {{.VOLSYNC_RESOURCES_DIR}}/scripts/wait-for-job.sh
-      - test -f {{.VOLSYNC_RESOURCES_DIR}}/templates/list.yaml.j2
-    silent: true
+      vars: [CLUSTER]
   unlock:
-    desc: Unlock a Restic repository for an application
-    summary: |
-      CLUSTER: Cluster to run command against (required)
-      NS: Namespace the PVC is in (default: default)
-      APP: Application to unlock (required)
-    cmds:
-      - '{{.MINIJINJA_CMD}} {{.VOLSYNC_RESOURCES_DIR}}/templates/unlock.yaml.j2 | kubectl apply -f -'
-      - bash {{.VOLSYNC_RESOURCES_DIR}}/scripts/wait-for-job.sh volsync-unlock-{{.APP}} {{.NS}}
-      - kubectl --namespace {{.NS}} wait job/volsync-unlock-{{.APP}} --for condition=complete --timeout=1m
-      - kubectl --namespace {{.NS}} logs job/volsync-unlock-{{.APP}} --container minio
-      - kubectl --namespace {{.NS}} logs job/volsync-unlock-{{.APP}} --container r2
-      - kubectl --namespace {{.NS}} delete job volsync-unlock-{{.APP}}
-    vars:
-      NS: '{{.NS | default "default"}}'
-    env: *vars
+    desc: Unlock all Restic repositories
+    summary: |-
+      CLUSTER: Cluster to run command against (default: main)
+    cmd: >
+      kubectl get replicationsources --all-namespaces --no-headers -A | awk '{print $1, $2}' | xargs --max-procs=2 -l bash -c 'kubectl --namespace "$0" patch --field-manager=flux-client-side-apply replicationsources "$1" --type merge --patch "{\"spec\":{\"restic\":{\"unlock\":\"{{now | unixEpoch}}\"}}}"'
+
     requires:
-      vars: ['CLUSTER', 'APP']
-    preconditions:
-      - test -f {{.VOLSYNC_RESOURCES_DIR}}/scripts/wait-for-job.sh
-      - test -f {{.VOLSYNC_RESOURCES_DIR}}/templates/unlock.yaml.j2
-    silent: true
+      vars: [CLUSTER]
   # To run backup jobs in parallel for all replicationsources:
   #   - kubectl get replicationsources --all-namespaces --no-headers | awk '{print $2, $1}' | xargs --max-procs=4 -l bash -c 'task volsync:snapshot APP=$0 NS=$1'
   snapshot:
-    desc: Snapshot a PVC for an application
-    summary: |
-      CLUSTER: Cluster to run command against (required)
-      NS: Namespace the PVC is in (default: default)
+    desc: Snapshot an application
+    summary: |-
+      CLUSTER: Cluster to run command against (default: main)
+      NS: Namespace the application is in (default: default)
       APP: Application to snapshot (required)
     cmds:
-      - kubectl --namespace {{.NS}} patch replicationsources {{.APP}} --type merge -p '{"spec":{"trigger":{"manual":"{{.NOW}}"}}}'
-      - bash {{.VOLSYNC_RESOURCES_DIR}}/scripts/wait-for-job.sh volsync-src-{{.APP}} {{.NS}}
-      - kubectl --namespace {{.NS}} wait job/volsync-src-{{.APP}} --for condition=complete --timeout=120m
+      - kubectl --namespace {{.NS}} patch replicationsources {{.APP}} --type merge -p '{"spec":{"trigger":{"manual":"{{now | unixEpoch}}"}}}'
+      - until kubectl --namespace {{.NS}} get job/{{.JOB}} &>/dev/null; do sleep 5; done
+      - kubectl --namespace {{.NS}} wait job/{{.JOB}} --for=condition=complete --timeout=120m
     vars:
-      NOW: '{{now | date "150405"}}'
       NS: '{{.NS | default "default"}}'
-      CONTROLLER:
-        sh: '{{.VOLSYNC_RESOURCES_DIR}}/scripts/which-controller.sh {{.APP}} {{.NS}}'
-    env: *vars
+      JOB: volsync-src-{{.APP}}
     requires:
-      vars: ['CLUSTER', 'APP']
+      vars: [CLUSTER, APP]
     preconditions:
-      - test -f {{.VOLSYNC_RESOURCES_DIR}}/scripts/which-controller.sh
-      - test -f {{.VOLSYNC_RESOURCES_DIR}}/scripts/wait-for-job.sh
       - kubectl --namespace {{.NS}} get replicationsources {{.APP}}
   # To run restore jobs in parallel for all replicationdestinations:
   #    - kubectl get replicationsources --all-namespaces --no-headers | awk '{print $2, $1}' | xargs --max-procs=4 -l bash -c 'task volsync:restore APP=$0 NS=$1'
   restore:
-    desc: Restore a PVC for an application
-    summary: |
-      CLUSTER: Cluster to run command against (required)
-      NS: Namespace the PVC is in (default: default)
+    desc: Restore an application
+    summary: |-
+      CLUSTER: Cluster to run command against (default: main)
+      NS: Namespace the application is in (default: default)
       APP: Application to restore (required)
       PREVIOUS: Previous number of snapshots to restore (default: 2)
     cmds:
-      - {task: .suspend, vars: *vars}
-      - {task: .wipe, vars: *vars}
-      - {task: .restore, vars: *vars}
-      - {task: .resume, vars: *vars}
-    vars:
-      NS: '{{.NS | default "default"}}'
-      PREVIOUS: '{{.PREVIOUS | default 2}}'
-      RESTORE_AS_OF: '{{.RESTORE_AS_OF}}'
-      CONTROLLER:
-        sh: '{{.VOLSYNC_RESOURCES_DIR}}/scripts/which-controller.sh {{.APP}} {{.NS}}'
-      CLAIM:
-        sh: kubectl --namespace {{.NS}} get replicationsources/{{.APP}} --output=jsonpath="{.spec.sourcePVC}"
-      ACCESS_MODES:
-        sh: kubectl --namespace {{.NS}} get replicationsources/{{.APP}} --output=jsonpath="{.spec.restic.accessModes}"
-      CLASS_NAME:
-        sh: kubectl --namespace {{.NS}} get replicationsources/{{.APP}} --output=jsonpath="{.spec.sourcePVC}"
-      PUID:
-        sh: kubectl --namespace {{.NS}} get replicationsources/{{.APP}} --output=jsonpath="{.spec.restic.moverSecurityContext.runAsUser}"
-      PGID:
-        sh: kubectl --namespace {{.NS}} get replicationsources/{{.APP}} --output=jsonpath="{.spec.restic.moverSecurityContext.runAsGroup}"
-    env: *vars
+      - task: .suspend
+      - task: .restore
+      - task: .resume
     requires:
-      vars: ['CLUSTER', 'APP']
-    preconditions:
-      - test -f {{.VOLSYNC_RESOURCES_DIR}}/scripts/which-controller.sh
-  cleanup:
-    desc: Delete volume populator PVCs in all namespaces
-    summary: |
-      CLUSTER: Cluster to run command against (required)
-    cmds:
-      - for: {var: DEST}
-        cmd: |
-          {{- $items := (split "/" .ITEM) }}
-          kubectl delete pvc --namespace {{ $items._0 }} {{ $items._1 }}
-      - for: {var: CACHE}
-        cmd: |
-          {{- $items := (split "/" .ITEM) }}
-          kubectl delete pvc --namespace {{ $items._0 }} {{ $items._1 }}
-      - for: {var: SNAPS}
-        cmd: |
-          {{- $items := (split "/" .ITEM) }}
-          kubectl delete volumesnapshot --namespace {{ $items._0 }} {{ $items._1 }}
-    vars:
-      DEST:
-        sh: kubectl get pvc --all-namespaces --no-headers | grep "dst-dest" | awk '{print $1 "/" $2}'
-      CACHE:
-        sh: kubectl get pvc --all-namespaces --no-headers | grep "dst-cache" | awk '{print $1 "/" $2}'
-      SNAPS:
-        sh: kubectl get volumesnapshot --all-namespaces --no-headers | grep "dst-dest" | awk '{print $1 "/" $2}'
-    env: *vars
-    requires:
-      vars: ['CLUSTER']
-  # Suspend the Flux ks and hr
+      vars: [CLUSTER, APP]
   .suspend:
     internal: true
     cmds:
       - flux --namespace flux-system suspend kustomization {{.APP}}
       - flux --namespace {{.NS}} suspend helmrelease {{.APP}}
-      - kubectl --namespace {{.NS}} scale {{.CONTROLLER}} --replicas 0
-      - kubectl --namespace {{.NS}} wait pod --for delete --selector="app.kubernetes.io/name={{.APP}}" --timeout=2m
-    env: *vars
-  # Wipe the PVC of all data
-  .wipe:
-    internal: true
-    cmds:
-      - '{{.MINIJINJA_CMD}} {{.VOLSYNC_RESOURCES_DIR}}/templates/wipe.yaml.j2 | kubectl apply -f -'
-      - bash {{.VOLSYNC_RESOURCES_DIR}}/scripts/wait-for-job.sh volsync-wipe-{{.APP}} {{.NS}}
-      - kubectl --namespace {{.NS}} wait job/volsync-wipe-{{.APP}} --for condition=complete --timeout=120m
-      - kubectl --namespace {{.NS}} logs job/volsync-wipe-{{.APP}} --container main
-      - kubectl --namespace {{.NS}} delete job volsync-wipe-{{.APP}}
-    env: *vars
-    preconditions:
-      - test -f {{.VOLSYNC_RESOURCES_DIR}}/templates/wipe.yaml.j2
-      - test -f {{.VOLSYNC_RESOURCES_DIR}}/scripts/wait-for-job.sh
-  # Create VolSync replicationdestination CR to restore data
+      - kubectl --namespace {{.NS}} scale {{.CONTROLLER}}/{{.APP}} --replicas 0
+      - kubectl --namespace {{.NS}} wait pod --for=delete --selector="app.kubernetes.io/name={{.APP}}" --timeout=5m
+    vars:
+      NS: '{{.NS | default "default"}}'
+      APP: '{{.APP}}'
+      CONTROLLER:
+        sh: kubectl --namespace {{.NS}} get deployment {{.APP}} &>/dev/null && echo deployment || echo statefulset
   .restore:
     internal: true
     cmds:
-      - '{{.MINIJINJA_CMD}} {{.VOLSYNC_RESOURCES_DIR}}/templates/replicationdestination.yaml.j2 | kubectl apply -f -'
-      - bash {{.VOLSYNC_RESOURCES_DIR}}/scripts/wait-for-job.sh volsync-dst-{{.APP}} {{.NS}}
-      - kubectl --namespace {{.NS}} wait job/volsync-dst-{{.APP}} --for condition=complete --timeout=120m
-      - kubectl --namespace {{.NS}} delete replicationdestination volsync-dst-{{.APP}}
-    env: *vars
+      - minijinja-cli --env --trim-blocks --lstrip-blocks --autoescape=none {{.VOLSYNC_RESOURCES_DIR}}/replicationdestination.yaml.j2 | kubectl apply --server-side --filename -
+      - until kubectl --namespace {{.NS}} get job/{{.JOB}} &>/dev/null; do sleep 5; done
+      - kubectl --namespace {{.NS}} wait job/{{.JOB}} --for=condition=complete --timeout=120m
+      - kubectl --namespace {{.NS}} delete replicationdestination {{.JOB}}
+    vars:
+      NS: '{{.NS | default "default"}}'
+      JOB: volsync-dst-{{.APP}}
+      PREVIOUS: '{{.PREVIOUS | default 2}}'
+      CLAIM:
+        sh: kubectl --namespace {{.NS}} get replicationsources/{{.APP}} --output=jsonpath="{.spec.sourcePVC}"
+      ACCESS_MODES:
+        sh: kubectl --namespace {{.NS}} get replicationsources/{{.APP}} --output=jsonpath="{.spec.restic.accessModes}"
+      STORAGE_CLASS_NAME:
+        sh: kubectl --namespace {{.NS}} get replicationsources/{{.APP}} --output=jsonpath="{.spec.restic.storageClassName}"
+      PUID:
+        sh: kubectl --namespace {{.NS}} get replicationsources/{{.APP}} --output=jsonpath="{.spec.restic.moverSecurityContext.runAsUser}"
+      PGID:
+        sh: kubectl --namespace {{.NS}} get replicationsources/{{.APP}} --output=jsonpath="{.spec.restic.moverSecurityContext.runAsGroup}"
+    env:
+      NS: '{{.NS}}'
+      JOB: '{{.JOB}}'
+      APP: '{{.APP}}'
+      PREVIOUS: '{{.PREVIOUS}}'
+      CLAIM: '{{.CLAIM}}'
+      ACCESS_MODES: '{{.ACCESS_MODES}}'
+      STORAGE_CLASS_NAME: '{{.STORAGE_CLASS_NAME}}'
+      PUID: '{{.PUID}}'
+      PGID: '{{.PGID}}'
     preconditions:
-      - test -f {{.VOLSYNC_RESOURCES_DIR}}/templates/replicationdestination.yaml.j2
-      - test -f {{.VOLSYNC_RESOURCES_DIR}}/scripts/wait-for-job.sh
-  # Resume Flux ks and hr
+      - test -f {{.VOLSYNC_RESOURCES_DIR}}/replicationdestination.yaml.j2
   .resume:
     internal: true
     cmds:
       - flux --namespace {{.NS}} resume helmrelease {{.APP}}
       - flux --namespace flux-system resume kustomization {{.APP}}
-    env: *vars
+      - kubectl --namespace {{.NS}} scale {{.CONTROLLER}}/{{.APP}} --replicas 1
+      - kubectl --namespace {{.NS}} wait pod --for=condition=ready --selector="app.kubernetes.io/name={{.APP}}" --timeout=5m
+    vars:
+      NS: '{{.NS | default "default"}}'
+      APP: '{{.APP}}'
+      CONTROLLER:
+        sh: kubectl --namespace {{.NS}} get deployment {{.APP}} &>/dev/null && echo deployment || echo statefulset
