fix: nfs mount and path

--- a/k8s/apps/kyverno/kyverno/policies/volsync-movers.yaml
+++ b/k8s/apps/kyverno/kyverno/policies/volsync-movers.yaml
@@ -45,5 +45,5 @@ spec:
                 volumes:
                   - name: repository
                     nfs:
-                      server: expanse.internal
-                      path: /eros/Volsync
+                      server: nfs.internal
+                      path: /mnt/nfs/
