--- a/k8s/apps/database/valkey/ks.yaml
+++ b/k8s/apps/database/valkey/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app redis
+  name: &app valkey
   namespace: flux-system
 spec:
   targetNamespace: database
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets-stores
-  path: ./k8s/apps/database/redis/app
+  path: ./k8s/apps/database/valkey/app
   prune: true
   sourceRef:
     kind: GitRepository
